Fixed homepage animation off-center issue

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -35,7 +35,7 @@
   align-items: center;
   justify-content: center;
   transition: .3s;
-  margin-top: 50vh;
+  margin-top: 40vh;
 }
 
 
